--- a/build.gradle
+++ b/build.gradle
@@ -15,11 +15,6 @@ configurations {
 }
 
 repositories {
-    maven {
-        name 'interpark-nexus'
-        url("http://nexus.interpark.com:8888/nexus/content/groups/maven-public/")
-        allowInsecureProtocol = true
-    }
     mavenCentral()
 }
 
@@ -28,6 +23,7 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.projectlombok:lombok'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.7'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
